--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
                 <p class="welcome-txt"><div class="welcome-covver"><span class="welcom-quote">"</span>We are heartly</div><span class="welcome-txtt">welcome</span><div class="welcome-covver">you to our tech fest<span class="welcom-quote">"</span></div></p>
                 <p class="welcome-venue">Venue in  GCEB | April 5,6-2022</p>
             </div>
+            <div class="hero-right-section">
+                <div class="GCEB-college">
+                    <p class="gceb-text">Government College of Engineering, Bargur.</p>
+                    <p class="gceb-dep">Department of ECE</p>
+                </div>
+                <p class="Gceb-present">Present's</p>
+                <h1 class="Gceb-Reviva">Reviva'<span class="gceb-Reviva-22">22</span></h1>
+                <p class="gceb-nte">A National Level Tech Event</p>
+                <a class="Registration-link" href="#">View Events</a>
+            </div>
         </section>
     </body>
 </html>
