thidday 2nd part

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <a href="#" class="navlinks">Comittee</a>
                     <a href="#" class="navlinks">Contact</a>
                 </div>
+                <span class="material-icons menuu">menu</span>
             </nav>
         </header>
         <section class="hero-section">
