thid day 3 part

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <script src="menu.js"></script>
     </head>
     <body>
         <header class="header">
@@ -19,7 +20,15 @@
                     <a href="#" class="navlinks">Comittee</a>
                     <a href="#" class="navlinks">Contact</a>
                 </div>
-                <span class="material-icons menuu">menu</span>
+                <a href="javascript:void(0);" class="icon" onclick="menuFunction()"><span class="material-icons menuu">menu</span></a>
+            </nav>
+            <nav class="smallscreenmenu" id="menu-clickk">
+                    <a href="#" class="navlinks1">Home</a>
+                    <a href="#" class="navlinks1">About</a>
+                    <a href="#" class="navlinks1">Gallery</a>
+                    <a href="#" class="navlinks1">Event</a>
+                    <a href="#" class="navlinks1">Comittee</a>
+                    <a href="#" class="navlinks1">Contact</a>
             </nav>
         </header>
         <section class="hero-section">
