third day 4thpart

--- a/index.html
+++ b/index.html
@@ -51,5 +51,9 @@
                 <a class="Registration-link" href="#">View Events</a>
             </div>
         </section>
+        <section class="intro">
+            <p class="intro-text topic-title">INTRO</p>
+            <iframe width="955" height="537" class="intro-video" src="https://www.youtube.com/embed/2o2y-_d2BHY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
     </body>
 </html>
