third day 5thpart

--- a/index.html
+++ b/index.html
@@ -55,5 +55,9 @@
             <p class="intro-text topic-title">INTRO</p>
             <iframe width="955" height="537" class="intro-video" src="https://www.youtube.com/embed/2o2y-_d2BHY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
+        <section class="intro about">
+            <p class="about-text topic-title">ABOUT</p>
+            <p class="about-description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+        </section>
     </body>
 </html>
