--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="#" class="navlinks">About</a>
                     <a href="#" class="navlinks">Gallery</a>
                     <a href="#" class="navlinks">Event</a>
-                    <a href="#" class="navlinks">Comittee</a>
+                    <a href="#" class="navlinks">Committee</a>
                     <a href="#" class="navlinks">Contact</a>
                 </div>
                 <a href="javascript:void(0);" class="icon" onclick="menuFunction()"><span class="material-icons menuu">menu</span></a>
@@ -27,7 +27,7 @@
                     <a href="#" class="navlinks1">About</a>
                     <a href="#" class="navlinks1">Gallery</a>
                     <a href="#" class="navlinks1">Event</a>
-                    <a href="#" class="navlinks1">Comittee</a>
+                    <a href="#" class="navlinks1">Committee</a>
                     <a href="#" class="navlinks1">Contact</a>
             </nav>
         </header>
