4thday 2nd part

--- a/index.html
+++ b/index.html
@@ -59,5 +59,56 @@
             <p class="about-text topic-title">ABOUT</p>
             <p class="about-description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
         </section>
+        <section class="intro team">
+            <p class="team-text topic-title">TEAM</p>
+            <div class="team-container">
+                <div class="team team-1">
+                    <p class="team-name">Freshers</p>
+                    <img src="img/Revivalogo1.png" class="team-img">
+                </div>
+                <div class="team team-1">
+                    <img src="img/Revivalogo1.png" class="team-img">
+                    <p class="team-name">2nd year</p>
+                </div>
+                <div class="team team-1">
+                    <p class="team-name">3rd year</p>
+                    <img src="img/Revivalogo1.png" class="team-img">
+                </div>
+                <div class="team team-1">
+                    <img src="img/Revivalogo1.png" class="team-img">
+                    <p class="team-name">4th year</p>
+                </div>
+            </div>
+        </section>
+        <footer class="footerr">
+            <div class="sitemap">
+                <h1 class="fotter-title">Site Map</h1>
+                <ul>
+                    <li><a href="#" class="navlinks2">Home</a></li>
+                    <li><a href="#" class="navlinks2">About</a></li>
+                    <li><a href="#" class="navlinks2">Gallery</a></li>
+                    <li><a href="#" class="navlinks2">Event</a></li>
+                    <li><a href="#" class="navlinks2">Committee</a></li>
+                    <li><a href="#" class="navlinks2">Contact</a></li>
+                </ul>
+            </div>
+            <div class="sitemap social-media">
+                <h1 class="fotter-title Socialmedia">Social Media</h1>
+                <ul>
+                    <li><a href="#" class="navlinks2">Youtube</a></li>
+                    <li><a href="#" class="navlinks2">Instagram</a></li>
+                    <li><a href="#" class="navlinks2">Facebook</a></li>
+                    <li><a href="#" class="navlinks2">Linkedin</a></li>
+                    <li><a href="https://gcebargur.ac.in" class="navlinks2">Official websice</a></li>
+                </ul>
+            </div>
+            <div class="sitemap contact">
+                <h1 class="fotter-title contactt">Contact</h1>
+                <ul>
+                    <li><a href="mailto:reviva2022ecea@gmail.com" class="navlinks2">reviva2022ecea@gmail.com</a></li>
+                    <li><a href="tel:9047435753" class="navlinks2">9047435753</a></li>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
