--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
         <section class="intro team">
             <p class="team-text topic-title">TEAM</p>
             <div class="team-container">
-                <div class="team team-1">
-                    <p class="team-name">Freshers</p>
+                <div class="team11 team-1">
+                    <div class="team-name"><p>Freshers</p></div>
                     <img src="img/Revivalogo1.png" class="team-img">
                 </div>
-                <div class="team team-1">
+                <div class="team12 team-1">
                     <img src="img/Revivalogo1.png" class="team-img">
-                    <p class="team-name">2nd year</p>
+                    <div class="team-name"><p>2nd year</p></div>
                 </div>
-                <div class="team team-1">
-                    <p class="team-name">3rd year</p>
+                <div class="team12 team-1">
+                    <div class="team-name"><p>3rd year</p></div>
                     <img src="img/Revivalogo1.png" class="team-img">
                 </div>
-                <div class="team team-1">
+                <div class="team12 team-1">
                     <img src="img/Revivalogo1.png" class="team-img">
-                    <p class="team-name">4th year</p>
+                    <div class="team-name"><p>4th year</p></div>
                 </div>
             </div>
         </section>
@@ -95,11 +95,11 @@
             <div class="sitemap social-media">
                 <h1 class="fotter-title Socialmedia">Social Media</h1>
                 <ul>
-                    <li><a href="#" class="navlinks2">Youtube</a></li>
-                    <li><a href="#" class="navlinks2">Instagram</a></li>
-                    <li><a href="#" class="navlinks2">Facebook</a></li>
-                    <li><a href="#" class="navlinks2">Linkedin</a></li>
-                    <li><a href="https://gcebargur.ac.in" class="navlinks2">Official websice</a></li>
+                    <li><a href="#" target="_blank" class="navlinks2">Youtube</a></li>
+                    <li><a href="#" target="_blank" class="navlinks2">Instagram</a></li>
+                    <li><a href="#" target="_blank" class="navlinks2">Facebook</a></li>
+                    <li><a href="#" target="_blank" class="navlinks2">Linkedin</a></li>
+                    <li><a href="https://gcebargur.ac.in" target="_blank" class="navlinks2">Official websice</a></li>
                 </ul>
             </div>
             <div class="sitemap contact">
@@ -109,6 +109,7 @@
                     <li><a href="tel:9047435753" class="navlinks2">9047435753</a></li>
                 </ul>
             </div>
+            <img src="img/gcebargurlogo.png" class="bargur-image">
         </footer>
     </body>
 </html>
