--- a/event.html
+++ b/event.html
@@ -14,22 +14,22 @@
             <nav class="navbar">
                 <img class="logo" src="img/Revivalogo.png">
                 <div class="nav-link-container">
-                    <a href="#" class="navlinks">Home</a>
-                    <a href="#" class="navlinks">About</a>
+                    <a href="index.html" class="navlinks">Home</a>
+                    <a href=""index.html#about" class="navlinks">About</a>
                     <a href="#" class="navlinks">Gallery</a>
                     <a href="#" class="navlinks">Event</a>
-                    <a href="#" class="navlinks">Committee</a>
-                    <a href="#" class="navlinks">Contact</a>
+                    <a href="index.html#team" class="navlinks">Team</a>
+                    <a href="#contact" class="navlinks">Contact</a>
                 </div>
                 <a href="javascript:void(0);" class="icon" onclick="menuFunction()"><span class="material-icons menuu">menu</span></a>
             </nav>
             <nav class="smallscreenmenu" id="menu-clickk">
-                    <a href="#" class="navlinks1">Home</a>
-                    <a href="#" class="navlinks1">About</a>
+                    <a href="index.html" class="navlinks1">Home</a>
+                    <a href=""index.html#about" class="navlinks1">About</a>
                     <a href="#" class="navlinks1">Gallery</a>
                     <a href="#" class="navlinks1">Event</a>
-                    <a href="#" class="navlinks1">Committee</a>
-                    <a href="#" class="navlinks1">Contact</a>
+                    <a href="index.html#team" class="navlinks1">Team</a>
+                    <a href="#contact" class="navlinks1">Contact</a>
             </nav>
         </header>
        <section class="event">
@@ -41,28 +41,32 @@
                <p class="title ppt-title">Paper Presentation</p>
            </div>
            <div class="card1 technincalcard1">
-               <img class="card-image ppt-image" src="img/ppt.jpg">
-               <p class="title ppt-title">Paper Presentation</p>
+               <img class="card-image ppt-image" src="img/project.jpg">
+               <p class="title ppt-title">Project</p>
            </div>
         <div class="card1 technincalcard1">
-            <img class="card-image ppt-image" src="img/ppt.jpg">
-            <p class="title ppt-title">Paper Presentation</p>
+            <img class="card-image ppt-image" src="img/Circuitdesigning.jpg">
+            <p class="title ppt-title">Circuit Designing</p>
         </div>
         <div class="card1 technincalcard1">
-            <img class="card-image ppt-image" src="img/ppt.jpg">
-            <p class="title ppt-title">Paper Presentation</p>
+            <img class="card-image ppt-image" src="img/quiz.png">
+            <p class="title ppt-title">Quiz</p>
         </div>
         <div class="card1 technincalcard1">
-            <img class="card-image ppt-image" src="img/ppt.jpg">
-            <p class="title ppt-title">Paper Presentation</p>
+            <img class="card-image ppt-image" src="img/technicalspeech.jpg">
+            <p class="title ppt-title">Technical Speech</p>
         </div>
         <div class="card1 technincalcard1">
-            <img class="card-image ppt-image" src="img/ppt.jpg">
-            <p class="title ppt-title">Paper Presentation</p>
+            <img class="card-image ppt-image" src="img/circuitmaking.webp">
+            <p class="title ppt-title">Circuit Making</p>
         </div>   <div class="card1 technincalcard1">
-            <img class="card-image ppt-image" src="img/ppt.jpg">
-            <p class="title ppt-title">Paper Presentation</p>
+            <img class="card-image ppt-image" src="img/treasurehunt.png">
+            <p class="title ppt-title">Treasure Hunt</p>
         </div>
+        <div class="register-container">
+            <a href="https://forms.gle/gJrJ8EzYZPQZLnro9" class="register-link">Register Events</a>
+            <p class="Register-fee">Registration fee: 150 Ruppes</p>
+        </div> 
     </div>
    </div>
        </section>
@@ -72,48 +76,49 @@
         <h1 class="event-title">NON TECHNICAL EVENT</h1>
         <div class="technical-event">
         <div class="card1 technincalcard1">
-            <img class="card-image ppt-image" src="img/ppt.jpg">
-            <p class="title ppt-title">Paper Presentation</p>
+            <img class="card-image ppt-image" src="img/musicalchair.jpg">
+            <p class="title ppt-title">Musical Chair</p>
         </div>
         <div class="card1 technincalcard1">
-            <img class="card-image ppt-image" src="img/ppt.jpg">
-            <p class="title ppt-title">Paper Presentation</p>
+            <img class="card-image ppt-image" src="img/objectindentify.jpg">
+            <p class="title ppt-title">Object Identify</p>
         </div>
      <div class="card1 technincalcard1">
-         <img class="card-image ppt-image" src="img/ppt.jpg">
-         <p class="title ppt-title">Paper Presentation</p>
+         <img class="card-image ppt-image" src="img/fasionshow.jpg">
+         <p class="title ppt-title">Fasion Show</p>
      </div>
      <div class="card1 technincalcard1">
-         <img class="card-image ppt-image" src="img/ppt.jpg">
-         <p class="title ppt-title">Paper Presentation</p>
+         <img class="card-image ppt-image" src="img/bioscope.jpg">
+         <p class="title ppt-title">Bio Scope</p>
      </div>
      <div class="card1 technincalcard1">
-         <img class="card-image ppt-image" src="img/ppt.jpg">
-         <p class="title ppt-title">Paper Presentation</p>
+         <img class="card-image ppt-image" src="img/lyricsfinding.jpg">
+         <p class="title ppt-title">Lyrics Finding</p>
      </div>
      <div class="card1 technincalcard1">
-         <img class="card-image ppt-image" src="img/ppt.jpg">
-         <p class="title ppt-title">Paper Presentation</p>
-     </div>   <div class="card1 technincalcard1">
-         <img class="card-image ppt-image" src="img/ppt.jpg">
-         <p class="title ppt-title">Paper Presentation</p>
+         <img class="card-image ppt-image" src="img/dar.jpg">
+         <p class="title ppt-title">Dare</p>
      </div>
+     <div class="register-container">
+        <a href="https://forms.gle/gJrJ8EzYZPQZLnro9" class="register-link">Register Events</a>
+        <p class="Register-fee">Registration fee: 150 Ruppes</p></div>   
  </div>
 </div>
+
     </section>
 
 
 
-        <footer class="footerr">
+        <footer class="footerr" id="contact">
             <div class="sitemap">
                 <h1 class="fotter-title">Site Map</h1>
                 <ul>
-                    <li><a href="#" class="navlinks2">Home</a></li>
-                    <li><a href="#" class="navlinks2">About</a></li>
+                    <li><a href="index.html" class="navlinks2">Home</a></li>
+                    <li><a href="index.html#about" class="navlinks2">About</a></li>
                     <li><a href="#" class="navlinks2">Gallery</a></li>
                     <li><a href="#" class="navlinks2">Event</a></li>
-                    <li><a href="#" class="navlinks2">Committee</a></li>
-                    <li><a href="#" class="navlinks2">Contact</a></li>
+                    <li><a href="index.html#team" class="navlinks2">Team</a></li>
+                    <li><a href="#contact" class="navlinks2">Contact</a></li>
                 </ul>
             </div>
             <div class="sitemap social-media">
