--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
                 <img class="logo" src="img/Revivalogo.png">
                 <div class="nav-link-container">
                     <a href="#" class="navlinks">Home</a>
-                    <a href="#" class="navlinks">About</a>
+                    <a href="#about" class="navlinks">About</a>
                     <a href="#" class="navlinks">Gallery</a>
-                    <a href="#" class="navlinks">Event</a>
-                    <a href="#" class="navlinks">Committee</a>
-                    <a href="#" class="navlinks">Contact</a>
+                    <a href="event.html" class="navlinks">Event</a>
+                    <a href="#team" class="navlinks">Team</a>
+                    <a href="#contact" class="navlinks">Contact</a>
                 </div>
                 <a href="javascript:void(0);" class="icon" onclick="menuFunction()"><span class="material-icons menuu">menu</span></a>
             </nav>
             <nav class="smallscreenmenu" id="menu-clickk">
                     <a href="#" class="navlinks1">Home</a>
-                    <a href="#" class="navlinks1">About</a>
+                    <a href="#about" class="navlinks1">About</a>
                     <a href="#" class="navlinks1">Gallery</a>
-                    <a href="#" class="navlinks1">Event</a>
-                    <a href="#" class="navlinks1">Committee</a>
-                    <a href="#" class="navlinks1">Contact</a>
+                    <a href="event.html" class="navlinks1">Event</a>
+                    <a href="#team" class="navlinks1">Team</a>
+                    <a href="#contact" class="navlinks1">Contact</a>
             </nav>
         </header>
         <section class="hero-section">
@@ -48,18 +48,18 @@
                 <p class="Gceb-present">Present's</p>
                 <h1 class="Gceb-Reviva">Reviva'<span class="gceb-Reviva-22">22</span></h1>
                 <p class="gceb-nte">A National Level Tech Event</p>
-                <a class="Registration-link" href="#">View Events</a>
+                <a class="Registration-link" href="event.html">Register Event</a>
             </div>
         </section>
         <section class="intro">
             <p class="intro-text topic-title">INTRO</p>
             <iframe width="955" height="537" class="intro-video" src="https://www.youtube.com/embed/2o2y-_d2BHY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
-        <section class="intro about">
+        <section class="intro about" id="about">
             <p class="about-text topic-title">ABOUT</p>
-            <p class="about-description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <p class="about-description description">The department of Electronics and communication Engineering was established in the year 1994 with the aim of creating young and budding engineers with necessary technical knowledge and professional skills. We aspire to impart to our students the value of communication and realization that they can make a difference. to train the students to be employed in multi-disciplinary areas including allied academic disciplines.The department also offers PG programme - M.E Applied Electronics to the students. It emphasizes the design of hardware systems as well as communication systems.<br><br> The purpose of a symposium is for industry experts to highlight their recent discoveries and the latest in research developments in a given field of study. Unlike a conference or seminar, a symposium usually involved the presentation of original research by the researchers themselves</p>
         </section>
-        <section class="intro team">
+        <section class="intro team" id="team">
             <p class="team-text topic-title">TEAM</p>
             <div class="team-container">
                 <div class="team11 team-1">
@@ -80,16 +80,16 @@
                 </div>
             </div>
         </section>
-        <footer class="footerr">
+        <footer class="footerr" id="contact">
             <div class="sitemap">
                 <h1 class="fotter-title">Site Map</h1>
                 <ul>
                     <li><a href="#" class="navlinks2">Home</a></li>
-                    <li><a href="#" class="navlinks2">About</a></li>
+                    <li><a href="#about" class="navlinks2">About</a></li>
                     <li><a href="#" class="navlinks2">Gallery</a></li>
-                    <li><a href="#" class="navlinks2">Event</a></li>
-                    <li><a href="#" class="navlinks2">Committee</a></li>
-                    <li><a href="#" class="navlinks2">Contact</a></li>
+                    <li><a href="event.html" class="navlinks2">Event</a></li>
+                    <li><a href="#team" class="navlinks2">Team</a></li>
+                    <li><a href="#contact" class="navlinks2">Contact</a></li>
                 </ul>
             </div>
             <div class="sitemap social-media">
