--- a/event.html
+++ b/event.html
@@ -65,7 +65,7 @@
         </div>
         <div class="register-container">
             <a href="https://forms.gle/gJrJ8EzYZPQZLnro9" class="register-link">Register Events</a>
-            <p class="Register-fee">Registration fee: 150 Ruppes</p>
+            <p class="Register-fee">Registration fee: 99 Rupees</p>
         </div> 
     </div>
    </div>
@@ -101,7 +101,7 @@
      </div>
      <div class="register-container">
         <a href="https://forms.gle/gJrJ8EzYZPQZLnro9" class="register-link">Register Events</a>
-        <p class="Register-fee">Registration fee: 150 Ruppes</p></div>   
+        <p class="Register-fee">Registration fee: 99 Rupees</p></div>   
  </div>
 </div>
 
@@ -128,7 +128,7 @@
                     <li><a href="#" target="_blank" class="navlinks2">Instagram</a></li>
                     <li><a href="#" target="_blank" class="navlinks2">Facebook</a></li>
                     <li><a href="#" target="_blank" class="navlinks2">Linkedin</a></li>
-                    <li><a href="https://gcebargur.ac.in" target="_blank" class="navlinks2">Official websice</a></li>
+                    <li><a href="https://gcebargur.ac.in" target="_blank" class="navlinks2">Official website</a></li>
                 </ul>
             </div>
             <div class="sitemap contact">
