--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
                 <p class="ecedep-ece">ECE</p>
             </div>
             <div class="welcome-hero-event">
-                <p class="welcome-txt"><div class="welcome-covver"><span class="welcom-quote">"</span>We are heartly</div><span class="welcome-txtt">welcome</span><div class="welcome-covver">you to our tech fest<span class="welcom-quote">"</span></div></p>
-                <p class="welcome-venue">Venue in  GCEB | April 5,6-2022</p>
+                <p class="welcome-txt"><div class="welcome-covver"><span class="welcom-quote">"</span>We heartly</div><span class="welcome-txtt">welcome</span><div class="welcome-covver">you to our tech fest<span class="welcom-quote">"</span></div></p>
+                <p class="welcome-venue">Venue: GCEB | April 5,6-2022</p>
             </div>
             <div class="hero-right-section">
                 <div class="GCEB-college">
                     <p class="gceb-text">Government College of Engineering, Bargur.</p>
                     <p class="gceb-dep">Department of ECE</p>
                 </div>
-                <p class="Gceb-present">Present's</p>
+                <p class="Gceb-present">Presents</p>
                 <h1 class="Gceb-Reviva">Reviva'<span class="gceb-Reviva-22">22</span></h1>
                 <p class="gceb-nte">A National Level Tech Event</p>
                 <a class="Registration-link" href="event.html">Register Event</a>
@@ -99,7 +99,7 @@
                     <li><a href="#" target="_blank" class="navlinks2">Instagram</a></li>
                     <li><a href="#" target="_blank" class="navlinks2">Facebook</a></li>
                     <li><a href="#" target="_blank" class="navlinks2">Linkedin</a></li>
-                    <li><a href="https://gcebargur.ac.in" target="_blank" class="navlinks2">Official websice</a></li>
+                    <li><a href="https://gcebargur.ac.in" target="_blank" class="navlinks2">Official website</a></li>
                 </ul>
             </div>
             <div class="sitemap contact">
