--- a/event.html
+++ b/event.html
@@ -124,10 +124,10 @@
             <div class="sitemap social-media">
                 <h1 class="fotter-title Socialmedia">Social Media</h1>
                 <ul>
-                    <li><a href="#" target="_blank" class="navlinks2">Youtube</a></li>
-                    <li><a href="#" target="_blank" class="navlinks2">Instagram</a></li>
-                    <li><a href="#" target="_blank" class="navlinks2">Facebook</a></li>
-                    <li><a href="#" target="_blank" class="navlinks2">Linkedin</a></li>
+                    <li><a href="https://www.youtube.com/channel/UCfv4lpU6Kmh6HUcnAWuXmNQ" target="_blank" class="navlinks2">Youtube</a></li>
+                    <li><a href="https://www.instagram.com/reviva_ece/" target="_blank" class="navlinks2">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/profile.php?id=100079833513170" target="_blank" class="navlinks2">Facebook</a></li>
+                    <li><a href="https://www.linkedin.com/in/reviva-ece-546648235/" target="_blank" class="navlinks2">Linkedin</a></li>
                     <li><a href="https://gcebargur.ac.in" target="_blank" class="navlinks2">Official website</a></li>
                 </ul>
             </div>
