--- a/event.html
+++ b/event.html
@@ -42,30 +42,30 @@
            </div>
            <div class="card1 technincalcard1">
                <img class="card-image ppt-image" src="img/project.jpg">
-               <p class="title ppt-title">Project</p>
+               <p class="title ppt-title">Project Expo</p>
            </div>
         <div class="card1 technincalcard1">
             <img class="card-image ppt-image" src="img/Circuitdesigning.jpg">
-            <p class="title ppt-title">Circuit Designing</p>
+            <p class="title ppt-title">Kill the Bug</p>
         </div>
         <div class="card1 technincalcard1">
             <img class="card-image ppt-image" src="img/quiz.png">
-            <p class="title ppt-title">Quiz</p>
+            <p class="title ppt-title">quizonics</p>
         </div>
         <div class="card1 technincalcard1">
             <img class="card-image ppt-image" src="img/technicalspeech.jpg">
-            <p class="title ppt-title">Technical Speech</p>
+            <p class="title ppt-title">Tech Talk</p>
         </div>
         <div class="card1 technincalcard1">
             <img class="card-image ppt-image" src="img/circuitmaking.webp">
-            <p class="title ppt-title">Circuit Making</p>
+            <p class="title ppt-title">Mr.Embed</p>
         </div>   <div class="card1 technincalcard1">
             <img class="card-image ppt-image" src="img/treasurehunt.png">
-            <p class="title ppt-title">Treasure Hunt</p>
+            <p class="title ppt-title">Techy Words</p>
         </div>
         <div class="register-container">
             <a href="https://forms.gle/gJrJ8EzYZPQZLnro9" class="register-link">Register Events</a>
-            <p class="Register-fee">Registration fee: 99 Rupees</p>
+            <p class="Register-fee">Registration fees: 99 Rupees</p>
         </div> 
     </div>
    </div>
@@ -77,31 +77,23 @@
         <div class="technical-event">
         <div class="card1 technincalcard1">
             <img class="card-image ppt-image" src="img/musicalchair.jpg">
-            <p class="title ppt-title">Musical Chair</p>
+            <p class="title ppt-title">Meme Contest</p>
         </div>
         <div class="card1 technincalcard1">
-            <img class="card-image ppt-image" src="img/objectindentify.jpg">
-            <p class="title ppt-title">Object Identify</p>
+            <img class="card-image ppt-image" src="img/treasurehunt.png">
+            <p class="title ppt-title">Treasure Hunt</p>
         </div>
      <div class="card1 technincalcard1">
-         <img class="card-image ppt-image" src="img/fasionshow.jpg">
-         <p class="title ppt-title">Fasion Show</p>
-     </div>
-     <div class="card1 technincalcard1">
          <img class="card-image ppt-image" src="img/bioscope.jpg">
-         <p class="title ppt-title">Bio Scope</p>
+         <p class="title ppt-title">Guess the word</p>
      </div>
      <div class="card1 technincalcard1">
          <img class="card-image ppt-image" src="img/lyricsfinding.jpg">
-         <p class="title ppt-title">Lyrics Finding</p>
-     </div>
-     <div class="card1 technincalcard1">
-         <img class="card-image ppt-image" src="img/dar.jpg">
-         <p class="title ppt-title">Dare</p>
+         <p class="title ppt-title">Poster Presentation</p>
      </div>
      <div class="register-container">
         <a href="https://forms.gle/gJrJ8EzYZPQZLnro9" class="register-link">Register Events</a>
-        <p class="Register-fee">Registration fee: 99 Rupees</p></div>   
+        <p class="Register-fee">Registration fees: 99 Rupees</p></div>   
  </div>
 </div>
 
