--- a/event.html
+++ b/event.html
@@ -50,7 +50,7 @@
         </div>
         <div class="card1 technincalcard1">
             <img class="card-image ppt-image" src="img/quiz.png">
-            <p class="title ppt-title">quizonics</p>
+            <p class="title ppt-title">Quizonics</p>
         </div>
         <div class="card1 technincalcard1">
             <img class="card-image ppt-image" src="img/technicalspeech.jpg">
